samples/_failures_safe/1761169868_8036f2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e9dc9bdd.c: In function ‘main’:
./samples/SAFE/__tmp_e9dc9bdd.c:146:38: error: expected ‘)’ at end of input
  146 |         if (strcmp(input, "ALL") == 0
      |            ~                         ^
      |                                      )
./samples/SAFE/__tmp_e9dc9bdd.c:146:9: error: expected declaration or statement at end of input
  146 |         if (strcmp(input, "ALL") == 0
      |         ^~
./samples/SAFE/__tmp_e9dc9bdd.c:146:9: error: expected declaration or statement at end of input
